--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
-  "name": "react-project",
+  "name": "news-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "mdbreact": "^4.8.4",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-redux": "^5.1.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
-    "wi-framework": "^2.1.7"
+    "react-slick": "^0.23.2",
+    "react-transition-group": "^2.5.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "wi-framework": "^2.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
