--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "news-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "bootstrap": "^4.1.3",
     "mdbreact": "^4.8.4",
@@ -23,6 +23,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "wael-zoaiter.github.io/daily-world",
   "eslintConfig": {
     "extends": "react-app"
   },
