--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "homepage": "https://wael-zoaiter.github.io/daily-world/docs",
+  "homepage": "https://wael-zoaiter.github.io/daily-world/",
   "eslintConfig": {
     "extends": "react-app"
   },
